<resources>
    <string name="app_name">بینا</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="home">خانه</string>
    <string name="news">اخبار</string>
    <string name="favorites">علاقه مندی ها</string>
    <string name="support">پشتیبانی</string>
    <string name="about">درباره ما</string>
    <string name="settings">تنظیمات</string>
    <string name="answers">پاسخ ها</string>
    <string name="receiving_data">دریافت اطلاعات</string>
    <string name="failed_title">خطا</string>
    <string name="receiving_data_failed">دریافت اطلاعات با خطار مواج شد. لطفا دوباره تلاش کنید</string>
    <string name="receiving_data_from_server">دریافت اطلاعات از سرور. این داده ها جایگزین داده های فعلی میشوند. آیا مایلید؟</string>
    <string name="getting_titles">گرفتن عنوان ها</string>
    <string name="getting_subtitles">گرفتن زیر عنوان ها</string>
    <string name="getting_medias">گرفتن عنوان مدیا ها</string>
    <string name="retry_restart_again">مشکلی رخ داده است. دوباره تلاش کنید</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="exit">خروج</string>
    <string name="retry">تلاش دوباره</string>
    <string name="submit">ثبت</string>
    <string name="search">جستجو</string>
    <string name="added_to_favs">به علاقه مندی ها اضافه شد</string>
    <string name="delete_from_favs">از علاقه مندی ها حذف شد</string>
    <string name="font_size">اندازه متن</string>
    <string name="sample_string">توضیح این قسمت اینکه این بخش برای افزایش کارایی استفاده میشود.</string>
    <string name="animations">انیمیشن ها</string>
    <string name="on">روشن</string>
    <string name="off">خاموش</string>
    <string name="new_question">سوال جدید</string>
    <string name="send_question">ارسال سوال</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="ok">باشه</string>
    <string name="username">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="login">ورود</string>
    <string name="logout">خروج از حساب</string>
    <string name="login_error">ورود با خطا مواجه شده است</string>
    <string name="no_net">اتصال به اینترنت برقرار نیست</string>
    <string name="no_item">آیتمی موجود نیست</string>
    <string name="sync_data">همگام سازی اطلاعات با سرور</string>
    <string name="download_files">دانلود فایل ها</string>
    <string name="no_file_to_download">فایلی برای دانلود وجود ندارد</string>
    <string name="should_not_empty">نباید خالی باشد</string>
    <string name="select_file">آپلود فایل</string>
    <string name="download_files_from_slide_menu">برای دانلود فایل ها از منوی کناری دانلود فایل ها را انتخاب کنید</string>
    <string name="no_uploaded">فایل به درستی آپلود نشده است</string>
    <string name="delete_file">حذف فایل</string>
    <string name="sent">ارسال شد</string>
    <string name="uploaded">آپلود شد</string>
    <string name="file_deleted">فایل پاک شد</string>
    <string name="toolbar_title">سوال</string>
    <string name="enter_ticket_title">عنوان گفتگو را وارد کنید</string>
    <string name="select">انتخاب کنید</string>
    <string name="send_video">ارسال فیلم</string>
    <string name="send_pic">ارسال عکس</string>
    <string name="about_bina">این برنامه متعلق به شرکت بینا میباشد</string>
</resources>
