<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/id_home"
        android:title="@string/home"
        android:icon="@mipmap/home"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/id_news"
        android:title="@string/news"
        android:icon="@mipmap/news"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/id_support"
        android:title="@string/support"
        android:icon="@mipmap/support"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/id_about"
        android:title="@string/about"
        android:icon="@mipmap/about"
        app:showAsAction="always|withText"/>

</menu>